Prevent user and group links from wrapping
This is awkward when it happens - a user or group name shouldn't be
broken up across lines.

--- a/tildes/scss/modules/_link.scss
+++ b/tildes/scss/modules/_link.scss
@@ -2,6 +2,8 @@
 // SPDX-License-Identifier: AGPL-3.0-or-later
 
 a.link-user, a.link-group {
+  white-space: nowrap;
+
   &:visited {
     color: $blue;
   }
